--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,29 +1,26 @@
 {
   "compilerOptions": {
-    /* ========== File & Module Layout ========== */
-    "target": "es2019",                    // Modern JS output compatible with Node
-    "module": "commonjs",                  // Works perfectly with ts-node (no .js headaches)
-    "rootDir": "./src",                    // Your TypeScript source files
-    "outDir": "./dist",                    // Compiled JS output folder
+    "target": "es2019",
+    "module": "commonjs",
+    "rootDir": "./src",
+    "outDir": "./dist",
 
-    /* ========== Interoperability & Environment ========== */
-    "esModuleInterop": true,               // Allows `import express from "express"`
-    "moduleResolution": "node",            // Standard Node.js resolution
-    "resolveJsonModule": true,             // Enables importing JSON if needed
-    "lib": ["esnext"],                     // Enable latest language features
-    "types": ["node"],                     // Type definitions for Node environment
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "lib": ["esnext"],
+    //"types": ["node"],
 
-    /* ========== Type Checking ========== */
-    "strict": true,                        // Enable all strict checks
-    "skipLibCheck": true,                  // Skip type checking for node_modules
+    "strict": true,
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
 
-    /* ========== Source Maps & Declarations ========== */
-    "sourceMap": true,                     // Useful for debugging
-    "declaration": false,                  // You don’t need .d.ts for this backend
-    "noEmitOnError": true                  // Prevent JS output on compile errors
-  },
+    "sourceMap": true,
+    "declaration": false,
+    "noEmitOnError": true,
 
-  "include": ["src"],                      // Compile everything in src/
-  "exclude": ["node_modules", "dist"]      // Ignore build output and dependencies
+    "typeRoots": ["./src/@types", "./node_modules/@types"]
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
