--- a/myapp/tsconfig.app.json
+++ b/myapp/tsconfig.app.json
@@ -26,5 +26,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "../server/src/middleware"]
+  "include": ["src"]
 }
