--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,7 +9,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "lib": ["esnext"],
-    //"types": ["node"],
+    "types": ["node"],
 
     "strict": true,
     "skipLibCheck": true,
